refactor(setting): replace database-driven settings with environment variables
- Deleted all Setting-related logic and database entities.
- Updated infrastructure clients to use Spring @Value.
- Reorganized CloudBuild files and updated package structure for SmtpService.